2004-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* CipherSuite.cs: Removed unused MD5 and SHA1 instances created in 
	PRF method (fix compilation warnings).

2004-12-13  Sebastien Pouliot  <sebastien@ximian.com>

	* SslClientStream.cs: New internal property, ServerCertificates, to
	"easily" retreive the server's certificate chain using reflection.

2004-11-23  Sebastien Pouliot  <sebastien@ximian.com>

	* RecordProtocol.cs: Fixed ClientHelloV2 support.

2004-11-10  Sebastien Pouliot  <sebastien@ximian.com>

	* CipherSuiteFactory.cs: Activated RSA_WITH_AES_256_CBC_SHA as it is
	supported by some browsers.
	* ContentType.cs: Removed ClientHelloV2 from the enum as it is not a
	"true" content type (it just looks so where we're processing it).
	* Context.cs: Added support to switch protocol (e.g. SSL2->SSL3 or 
	SSL2->TLS1). Contributed by Carlos Guzman Alvarez.
	* RecordProtocol.cs: Added support for ClientHelloV2 message 
	(contributed by Carlos Guzman Alvarez). This is	a Handshake message
	so it must be MACed. Also fixed the challenge length because some
	browsers implementation don't interpret "This value must be 32." as
	having 32 bytes.

2004-10-05  Sebastien Pouliot  <sebastien@ximian.com>

	* SslClientStream.cs: Changed InputBuffer to internal (was protected).

2004-10-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpsClientStream.cs: the .ctor receives a pre-read buffer now.
	* SslClientStream.cs: added InputBuffer property.

2004-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* RecordProtocol.cs: Fix alert data that could leak into appplication 
	data (e.g. when closing the SSL session).

2004-07-14  Carlos Guzman Alvarez  <carlosga@telefonica.net>

	* Removed duplicate license header file from
	all source files.

2004-07-14  Sebastien Pouliot  <sebastien@ximian.com>

	* SslClientStream.cs: Changed lock to "new object()" and not 
	String.Empty (as the read/write locks points becomes the same).